--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my_midway_project",
+  "name": "service-mw2",
   "version": "1.0.0",
-  "description": "{{description}}",
+  "description": "Midway.js 最佳实践",
   "private": true,
   "dependencies": {
     "@midwayjs/decorator": "^2.8.11",
@@ -50,12 +50,21 @@
     "lint": "mwts check",
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
-    "build": "midway-bin build -c"
+    "build": "midway-bin build -c",
+    "deploy": "midway-bin deploy"
   },
   "midway-bin-clean": [
     ".vscode/.tsbuildinfo",
     "dist"
   ],
+  "midway-integration": {
+    "lifecycle": {
+      "before:package:cleanup": "npm run build"
+    }
+  },
+  "egg": {
+    "framework": "@midwayjs/web"
+  },
   "repository": {
     "type": "git",
     "url": ""
